add gallery and notices page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,41 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Basic -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+
+    <!-- Title -->
+    <title>Indus Public School | Excellence in Education</title>
+
+    <!-- SEO Meta -->
+    <meta
+      name="description"
+      content="Indus Public School provides quality education with discipline, values, and modern learning facilities."
+    />
+    <meta
+      name="keywords"
+      content="Indus Public School, School in Rohtak, Best School, CBSE School, Education"
+    />
+    <meta name="author" content="Indus Public School" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700;800&family=Inter:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#1e40af" />
   </head>
-  <body>
+
+  <body class="bg-white text-gray-800 antialiased">
     <div id="root"></div>
+
+    <!-- Vite Entry -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
